Compilateur/y.output
Terminaux inutilisés dans la grammaire

    tNE
    tGE
    tLE
    tNOT
    tRETURN
    tERR


Grammaire

    0 $accept: Program $end

    1 Program: Functions

    2 Functions: Function
    3          | Function Functions

    4 Function: FunctionType FunctionName tLPAR DeclareArgs tRPAR tLBRACE Body tRBRACE

    5 CallFunction: tPRINTF tLPAR tID tRPAR
    6             | FunctionName tLPAR CallArgs tRPAR

    7 DeclareArgs: VarType tID DeclArgNext
    8            | %empty

    9 DeclArgNext: tCOMMA DeclareArgs
   10            | %empty

   11 CallArgs: RightOperand CallArgNext
   12         | %empty

   13 CallArgNext: tCOMMA CallArgs
   14            | %empty

   15 PreType: tCONST
   16        | %empty

   17 Type: tINT
   18     | tSTR
   19     | tVOID

   20 FunctionType: Type

   21 VarType: PreType Type

   22 FunctionName: tMAIN
   23             | tID

   24 Body: Lines

   25 Lines: Line Lines
   26      | %empty

   27 Line: CallFunction tSEMI
   28     | Declaration tSEMI
   29     | Assignment tSEMI

   30 $@1: %empty

   31 Line: Condition tLBRACE $@1 Body tRBRACE

   32 Declaration: VarType tID
   33            | VarType tID tASSIGN RightOperand

   34 RightOperand: CallFunction
   35             | Operations
   36             | tNB
   37             | tID

   38 Operations: Negative
   39           | Addition
   40           | Substraction
   41           | Division
   42           | Multiplication
   43           | And
   44           | Or
   45           | Equal
   46           | Lower
   47           | Greater

   48 Negative: tSUB RightOperand

   49 Substraction: RightOperand tSUB RightOperand

   50 Addition: RightOperand tADD RightOperand

   51 Division: RightOperand tDIV RightOperand

   52 Multiplication: RightOperand tMUL RightOperand

   53 And: RightOperand tAND RightOperand

   54 Or: RightOperand tOR RightOperand

   55 Equal: RightOperand tEQ RightOperand

   56 Lower: RightOperand tLT RightOperand

   57 Greater: RightOperand tGT RightOperand

   58 Assignment: tID tASSIGN RightOperand

   59 Condition: For
   60          | While
   61          | If
   62          | Elif
   63          | Else

   64 For: tFOR ForCondition

   65 $@2: %empty

   66 While: tWHILE $@2 ArgCondition

   67 If: tIF ArgCondition

   68 Elif: tELIF ArgCondition

   69 Else: tELSE

   70 ArgCondition: tLPAR Boolean tRPAR

   71 ForCondition: tLPAR DeclarationIndice tSEMI Boolean tSEMI Assignment tRPAR

   72 DeclarationIndice: Assignment
   73                  | tID

   74 Boolean: Operations
   75        | tID


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tADD (258) 50
    tSUB (259) 48 49
    tMUL (260) 52
    tDIV (261) 51
    tLT (262) 56
    tGT (263) 57
    tNE (264)
    tEQ (265) 55
    tGE (266)
    tLE (267)
    tAND (268) 53
    tOR (269) 54
    tNOT (270)
    tLBRACE (271) 4 31
    tRBRACE (272) 4 31
    tLPAR (273) 4 5 6 70 71
    tRPAR (274) 4 5 6 70 71
    tSEMI (275) 27 28 29 71
    tCOMMA (276) 9 13
    tIF (277) 67
    tELSE (278) 69
    tELIF (279) 68
    tWHILE (280) 66
    tPRINTF (281) 5
    tRETURN (282)
    tINT (283) 17
    tVOID (284) 19
    tASSIGN (285) 33 58
    tFOR (286) 64
    tCONST (287) 15
    tSTR (288) 18
    tMAIN (289) 22
    tERR (290)
    tNB <nb> (291) 36
    tID <varchar> (292) 5 7 23 32 33 37 58 73 75


Non-terminaux, suivis des règles où ils apparaissent

    $accept (38)
        à gauche: 0
    Program (39)
        à gauche: 1
        à droite: 0
    Functions (40)
        à gauche: 2 3
        à droite: 1 3
    Function (41)
        à gauche: 4
        à droite: 2 3
    CallFunction (42)
        à gauche: 5 6
        à droite: 27 34
    DeclareArgs (43)
        à gauche: 7 8
        à droite: 4 9
    DeclArgNext (44)
        à gauche: 9 10
        à droite: 7
    CallArgs (45)
        à gauche: 11 12
        à droite: 6 13
    CallArgNext (46)
        à gauche: 13 14
        à droite: 11
    PreType <nb> (47)
        à gauche: 15 16
        à droite: 21
    Type <nb> (48)
        à gauche: 17 18 19
        à droite: 20 21
    FunctionType (49)
        à gauche: 20
        à droite: 4
    VarType <nb> (50)
        à gauche: 21
        à droite: 7 32 33
    FunctionName (51)
        à gauche: 22 23
        à droite: 4 6
    Body (52)
        à gauche: 24
        à droite: 4 31
    Lines (53)
        à gauche: 25 26
        à droite: 24 25
    Line (54)
        à gauche: 27 28 29 31
        à droite: 25
    $@1 (55)
        à gauche: 30
        à droite: 31
    Declaration (56)
        à gauche: 32 33
        à droite: 28
    RightOperand (57)
        à gauche: 34 35 36 37
        à droite: 11 33 48 49 50 51 52 53 54 55 56 57 58
    Operations (58)
        à gauche: 38 39 40 41 42 43 44 45 46 47
        à droite: 35 74
    Negative (59)
        à gauche: 48
        à droite: 38
    Substraction (60)
        à gauche: 49
        à droite: 40
    Addition (61)
        à gauche: 50
        à droite: 39
    Division (62)
        à gauche: 51
        à droite: 41
    Multiplication (63)
        à gauche: 52
        à droite: 42
    And (64)
        à gauche: 53
        à droite: 43
    Or (65)
        à gauche: 54
        à droite: 44
    Equal (66)
        à gauche: 55
        à droite: 45
    Lower (67)
        à gauche: 56
        à droite: 46
    Greater (68)
        à gauche: 57
        à droite: 47
    Assignment (69)
        à gauche: 58
        à droite: 29 71 72
    Condition (70)
        à gauche: 59 60 61 62 63
        à droite: 31
    For (71)
        à gauche: 64
        à droite: 59
    While (72)
        à gauche: 66
        à droite: 60
    $@2 (73)
        à gauche: 65
        à droite: 66
    If (74)
        à gauche: 67
        à droite: 61
    Elif (75)
        à gauche: 68
        à droite: 62
    Else (76)
        à gauche: 69
        à droite: 63
    ArgCondition (77)
        à gauche: 70
        à droite: 66 67 68
    ForCondition (78)
        à gauche: 71
        à droite: 64
    DeclarationIndice (79)
        à gauche: 72 73
        à droite: 71
    Boolean (80)
        à gauche: 74 75
        à droite: 70 71


État 0

    0 $accept: . Program $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2
    tSTR   décalage et aller à l'état 3

    Program       aller à l'état 4
    Functions     aller à l'état 5
    Function      aller à l'état 6
    Type          aller à l'état 7
    FunctionType  aller à l'état 8


État 1

   17 Type: tINT .

    $défaut  réduction par utilisation de la règle 17 (Type)


État 2

   19 Type: tVOID .

    $défaut  réduction par utilisation de la règle 19 (Type)


État 3

   18 Type: tSTR .

    $défaut  réduction par utilisation de la règle 18 (Type)


État 4

    0 $accept: Program . $end

    $end  décalage et aller à l'état 9


État 5

    1 Program: Functions .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 6

    2 Functions: Function .
    3          | Function . Functions

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2
    tSTR   décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 2 (Functions)

    Functions     aller à l'état 10
    Function      aller à l'état 6
    Type          aller à l'état 7
    FunctionType  aller à l'état 8


État 7

   20 FunctionType: Type .

    $défaut  réduction par utilisation de la règle 20 (FunctionType)


État 8

    4 Function: FunctionType . FunctionName tLPAR DeclareArgs tRPAR tLBRACE Body tRBRACE

    tMAIN  décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    FunctionName  aller à l'état 13


État 9

    0 $accept: Program $end .

    $défaut  accepter


État 10

    3 Functions: Function Functions .

    $défaut  réduction par utilisation de la règle 3 (Functions)


État 11

   22 FunctionName: tMAIN .

    $défaut  réduction par utilisation de la règle 22 (FunctionName)


État 12

   23 FunctionName: tID .

    $défaut  réduction par utilisation de la règle 23 (FunctionName)


État 13

    4 Function: FunctionType FunctionName . tLPAR DeclareArgs tRPAR tLBRACE Body tRBRACE

    tLPAR  décalage et aller à l'état 14


État 14

    4 Function: FunctionType FunctionName tLPAR . DeclareArgs tRPAR tLBRACE Body tRBRACE

    tCONST  décalage et aller à l'état 15

    tRPAR     réduction par utilisation de la règle 8 (DeclareArgs)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    DeclareArgs  aller à l'état 16
    PreType      aller à l'état 17
    VarType      aller à l'état 18


État 15

   15 PreType: tCONST .

    $défaut  réduction par utilisation de la règle 15 (PreType)


État 16

    4 Function: FunctionType FunctionName tLPAR DeclareArgs . tRPAR tLBRACE Body tRBRACE

    tRPAR  décalage et aller à l'état 19


État 17

   21 VarType: PreType . Type

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2
    tSTR   décalage et aller à l'état 3

    Type  aller à l'état 20


État 18

    7 DeclareArgs: VarType . tID DeclArgNext

    tID  décalage et aller à l'état 21


État 19

    4 Function: FunctionType FunctionName tLPAR DeclareArgs tRPAR . tLBRACE Body tRBRACE

    tLBRACE  décalage et aller à l'état 22


État 20

   21 VarType: PreType Type .

    $défaut  réduction par utilisation de la règle 21 (VarType)


État 21

    7 DeclareArgs: VarType tID . DeclArgNext

    tCOMMA  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 10 (DeclArgNext)

    DeclArgNext  aller à l'état 24


État 22

    4 Function: FunctionType FunctionName tLPAR DeclareArgs tRPAR tLBRACE . Body tRBRACE

    tIF      décalage et aller à l'état 25
    tELSE    décalage et aller à l'état 26
    tELIF    décalage et aller à l'état 27
    tWHILE   décalage et aller à l'état 28
    tPRINTF  décalage et aller à l'état 29
    tFOR     décalage et aller à l'état 30
    tCONST   décalage et aller à l'état 15
    tMAIN    décalage et aller à l'état 11
    tID      décalage et aller à l'état 31

    tRBRACE   réduction par utilisation de la règle 26 (Lines)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    CallFunction  aller à l'état 32
    PreType       aller à l'état 17
    VarType       aller à l'état 33
    FunctionName  aller à l'état 34
    Body          aller à l'état 35
    Lines         aller à l'état 36
    Line          aller à l'état 37
    Declaration   aller à l'état 38
    Assignment    aller à l'état 39
    Condition     aller à l'état 40
    For           aller à l'état 41
    While         aller à l'état 42
    If            aller à l'état 43
    Elif          aller à l'état 44
    Else          aller à l'état 45


État 23

    9 DeclArgNext: tCOMMA . DeclareArgs

    tCONST  décalage et aller à l'état 15

    tRPAR     réduction par utilisation de la règle 8 (DeclareArgs)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    DeclareArgs  aller à l'état 46
    PreType      aller à l'état 17
    VarType      aller à l'état 18


État 24

    7 DeclareArgs: VarType tID DeclArgNext .

    $défaut  réduction par utilisation de la règle 7 (DeclareArgs)


État 25

   67 If: tIF . ArgCondition

    tLPAR  décalage et aller à l'état 47

    ArgCondition  aller à l'état 48


État 26

   69 Else: tELSE .

    $défaut  réduction par utilisation de la règle 69 (Else)


État 27

   68 Elif: tELIF . ArgCondition

    tLPAR  décalage et aller à l'état 47

    ArgCondition  aller à l'état 49


État 28

   66 While: tWHILE . $@2 ArgCondition

    $défaut  réduction par utilisation de la règle 65 ($@2)

    $@2  aller à l'état 50


État 29

    5 CallFunction: tPRINTF . tLPAR tID tRPAR

    tLPAR  décalage et aller à l'état 51


État 30

   64 For: tFOR . ForCondition

    tLPAR  décalage et aller à l'état 52

    ForCondition  aller à l'état 53


État 31

   23 FunctionName: tID .
   58 Assignment: tID . tASSIGN RightOperand

    tASSIGN  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 23 (FunctionName)


État 32

   27 Line: CallFunction . tSEMI

    tSEMI  décalage et aller à l'état 55


État 33

   32 Declaration: VarType . tID
   33            | VarType . tID tASSIGN RightOperand

    tID  décalage et aller à l'état 56


État 34

    6 CallFunction: FunctionName . tLPAR CallArgs tRPAR

    tLPAR  décalage et aller à l'état 57


État 35

    4 Function: FunctionType FunctionName tLPAR DeclareArgs tRPAR tLBRACE Body . tRBRACE

    tRBRACE  décalage et aller à l'état 58


État 36

   24 Body: Lines .

    $défaut  réduction par utilisation de la règle 24 (Body)


État 37

   25 Lines: Line . Lines

    tIF      décalage et aller à l'état 25
    tELSE    décalage et aller à l'état 26
    tELIF    décalage et aller à l'état 27
    tWHILE   décalage et aller à l'état 28
    tPRINTF  décalage et aller à l'état 29
    tFOR     décalage et aller à l'état 30
    tCONST   décalage et aller à l'état 15
    tMAIN    décalage et aller à l'état 11
    tID      décalage et aller à l'état 31

    tRBRACE   réduction par utilisation de la règle 26 (Lines)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    CallFunction  aller à l'état 32
    PreType       aller à l'état 17
    VarType       aller à l'état 33
    FunctionName  aller à l'état 34
    Lines         aller à l'état 59
    Line          aller à l'état 37
    Declaration   aller à l'état 38
    Assignment    aller à l'état 39
    Condition     aller à l'état 40
    For           aller à l'état 41
    While         aller à l'état 42
    If            aller à l'état 43
    Elif          aller à l'état 44
    Else          aller à l'état 45


État 38

   28 Line: Declaration . tSEMI

    tSEMI  décalage et aller à l'état 60


État 39

   29 Line: Assignment . tSEMI

    tSEMI  décalage et aller à l'état 61


État 40

   31 Line: Condition . tLBRACE $@1 Body tRBRACE

    tLBRACE  décalage et aller à l'état 62


État 41

   59 Condition: For .

    $défaut  réduction par utilisation de la règle 59 (Condition)


État 42

   60 Condition: While .

    $défaut  réduction par utilisation de la règle 60 (Condition)


État 43

   61 Condition: If .

    $défaut  réduction par utilisation de la règle 61 (Condition)


État 44

   62 Condition: Elif .

    $défaut  réduction par utilisation de la règle 62 (Condition)


État 45

   63 Condition: Else .

    $défaut  réduction par utilisation de la règle 63 (Condition)


État 46

    9 DeclArgNext: tCOMMA DeclareArgs .

    $défaut  réduction par utilisation de la règle 9 (DeclArgNext)


État 47

   70 ArgCondition: tLPAR . Boolean tRPAR

    tSUB     décalage et aller à l'état 63
    tPRINTF  décalage et aller à l'état 29
    tMAIN    décalage et aller à l'état 11
    tNB      décalage et aller à l'état 64
    tID      décalage et aller à l'état 65

    CallFunction    aller à l'état 66
    FunctionName    aller à l'état 34
    RightOperand    aller à l'état 67
    Operations      aller à l'état 68
    Negative        aller à l'état 69
    Substraction    aller à l'état 70
    Addition        aller à l'état 71
    Division        aller à l'état 72
    Multiplication  aller à l'état 73
    And             aller à l'état 74
    Or              aller à l'état 75
    Equal           aller à l'état 76
    Lower           aller à l'état 77
    Greater         aller à l'état 78
    Boolean         aller à l'état 79


État 48

   67 If: tIF ArgCondition .

    $défaut  réduction par utilisation de la règle 67 (If)


État 49

   68 Elif: tELIF ArgCondition .

    $défaut  réduction par utilisation de la règle 68 (Elif)


État 50

   66 While: tWHILE $@2 . ArgCondition

    tLPAR  décalage et aller à l'état 47

    ArgCondition  aller à l'état 80


État 51

    5 CallFunction: tPRINTF tLPAR . tID tRPAR

    tID  décalage et aller à l'état 81


État 52

   71 ForCondition: tLPAR . DeclarationIndice tSEMI Boolean tSEMI Assignment tRPAR

    tID  décalage et aller à l'état 82

    Assignment         aller à l'état 83
    DeclarationIndice  aller à l'état 84


État 53

   64 For: tFOR ForCondition .

    $défaut  réduction par utilisation de la règle 64 (For)


État 54

   58 Assignment: tID tASSIGN . RightOperand

    tSUB     décalage et aller à l'état 63
    tPRINTF  décalage et aller à l'état 29
    tMAIN    décalage et aller à l'état 11
    tNB      décalage et aller à l'état 64
    tID      décalage et aller à l'état 85

    CallFunction    aller à l'état 66
    FunctionName    aller à l'état 34
    RightOperand    aller à l'état 86
    Operations      aller à l'état 87
    Negative        aller à l'état 69
    Substraction    aller à l'état 70
    Addition        aller à l'état 71
    Division        aller à l'état 72
    Multiplication  aller à l'état 73
    And             aller à l'état 74
    Or              aller à l'état 75
    Equal           aller à l'état 76
    Lower           aller à l'état 77
    Greater         aller à l'état 78


État 55

   27 Line: CallFunction tSEMI .

    $défaut  réduction par utilisation de la règle 27 (Line)


État 56

   32 Declaration: VarType tID .
   33            | VarType tID . tASSIGN RightOperand

    tASSIGN  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 32 (Declaration)


État 57

    6 CallFunction: FunctionName tLPAR . CallArgs tRPAR

    tSUB     décalage et aller à l'état 63
    tPRINTF  décalage et aller à l'état 29
    tMAIN    décalage et aller à l'état 11
    tNB      décalage et aller à l'état 64
    tID      décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 12 (CallArgs)

    CallFunction    aller à l'état 66
    CallArgs        aller à l'état 89
    FunctionName    aller à l'état 34
    RightOperand    aller à l'état 90
    Operations      aller à l'état 87
    Negative        aller à l'état 69
    Substraction    aller à l'état 70
    Addition        aller à l'état 71
    Division        aller à l'état 72
    Multiplication  aller à l'état 73
    And             aller à l'état 74
    Or              aller à l'état 75
    Equal           aller à l'état 76
    Lower           aller à l'état 77
    Greater         aller à l'état 78


État 58

    4 Function: FunctionType FunctionName tLPAR DeclareArgs tRPAR tLBRACE Body tRBRACE .

    $défaut  réduction par utilisation de la règle 4 (Function)


État 59

   25 Lines: Line Lines .

    $défaut  réduction par utilisation de la règle 25 (Lines)


État 60

   28 Line: Declaration tSEMI .

    $défaut  réduction par utilisation de la règle 28 (Line)


État 61

   29 Line: Assignment tSEMI .

    $défaut  réduction par utilisation de la règle 29 (Line)


État 62

   31 Line: Condition tLBRACE . $@1 Body tRBRACE

    $défaut  réduction par utilisation de la règle 30 ($@1)

    $@1  aller à l'état 91


État 63

   48 Negative: tSUB . RightOperand

    tSUB     décalage et aller à l'état 63
    tPRINTF  décalage et aller à l'état 29
    tMAIN    décalage et aller à l'état 11
    tNB      décalage et aller à l'état 64
    tID      décalage et aller à l'état 85

    CallFunction    aller à l'état 66
    FunctionName    aller à l'état 34
    RightOperand    aller à l'état 92
    Operations      aller à l'état 87
    Negative        aller à l'état 69
    Substraction    aller à l'état 70
    Addition        aller à l'état 71
    Division        aller à l'état 72
    Multiplication  aller à l'état 73
    And             aller à l'état 74
    Or              aller à l'état 75
    Equal           aller à l'état 76
    Lower           aller à l'état 77
    Greater         aller à l'état 78


État 64

   36 RightOperand: tNB .

    $défaut  réduction par utilisation de la règle 36 (RightOperand)


État 65

   23 FunctionName: tID .
   37 RightOperand: tID .
   75 Boolean: tID .

    tLPAR     réduction par utilisation de la règle 23 (FunctionName)
    tRPAR     réduction par utilisation de la règle 75 (Boolean)
    tSEMI     réduction par utilisation de la règle 75 (Boolean)
    $défaut  réduction par utilisation de la règle 37 (RightOperand)


État 66

   34 RightOperand: CallFunction .

    $défaut  réduction par utilisation de la règle 34 (RightOperand)


État 67

   49 Substraction: RightOperand . tSUB RightOperand
   50 Addition: RightOperand . tADD RightOperand
   51 Division: RightOperand . tDIV RightOperand
   52 Multiplication: RightOperand . tMUL RightOperand
   53 And: RightOperand . tAND RightOperand
   54 Or: RightOperand . tOR RightOperand
   55 Equal: RightOperand . tEQ RightOperand
   56 Lower: RightOperand . tLT RightOperand
   57 Greater: RightOperand . tGT RightOperand

    tADD  décalage et aller à l'état 93
    tSUB  décalage et aller à l'état 94
    tMUL  décalage et aller à l'état 95
    tDIV  décalage et aller à l'état 96
    tLT   décalage et aller à l'état 97
    tGT   décalage et aller à l'état 98
    tEQ   décalage et aller à l'état 99
    tAND  décalage et aller à l'état 100
    tOR   décalage et aller à l'état 101


État 68

   35 RightOperand: Operations .
   74 Boolean: Operations .

    tRPAR     réduction par utilisation de la règle 74 (Boolean)
    tSEMI     réduction par utilisation de la règle 74 (Boolean)
    $défaut  réduction par utilisation de la règle 35 (RightOperand)


État 69

   38 Operations: Negative .

    $défaut  réduction par utilisation de la règle 38 (Operations)


État 70

   40 Operations: Substraction .

    $défaut  réduction par utilisation de la règle 40 (Operations)


État 71

   39 Operations: Addition .

    $défaut  réduction par utilisation de la règle 39 (Operations)


État 72

   41 Operations: Division .

    $défaut  réduction par utilisation de la règle 41 (Operations)


État 73

   42 Operations: Multiplication .

    $défaut  réduction par utilisation de la règle 42 (Operations)


État 74

   43 Operations: And .

    $défaut  réduction par utilisation de la règle 43 (Operations)


État 75

   44 Operations: Or .

    $défaut  réduction par utilisation de la règle 44 (Operations)


État 76

   45 Operations: Equal .

    $défaut  réduction par utilisation de la règle 45 (Operations)


État 77

   46 Operations: Lower .

    $défaut  réduction par utilisation de la règle 46 (Operations)


État 78

   47 Operations: Greater .

    $défaut  réduction par utilisation de la règle 47 (Operations)


État 79

   70 ArgCondition: tLPAR Boolean . tRPAR

    tRPAR  décalage et aller à l'état 102


État 80

   66 While: tWHILE $@2 ArgCondition .

    $défaut  réduction par utilisation de la règle 66 (While)


État 81

    5 CallFunction: tPRINTF tLPAR tID . tRPAR

    tRPAR  décalage et aller à l'état 103


État 82

   58 Assignment: tID . tASSIGN RightOperand
   73 DeclarationIndice: tID .

    tASSIGN  décalage et aller à l'état 54
